# routes/index.js
@@ -8,5 +8,6 @@ router.get('/', (req,res) =>{
 });
 
 router.use('/pets', require('./pets'));
+router.use('/owners', require('./owners'));
 
 module.exports = router;
